--- a/style.css
+++ b/style.css
@@ -1579,7 +1579,27 @@ a {
     text-decoration: underline;
 }
 
+.main-wrapper-middle-static-publication-written-comments {
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 12px;
+}
 
+.main-wrapper-middle-static-publication-written-comments-text {
+    padding: 6px 12px;
+    border-radius: 20px;
+    background-color: #F0F2F5;
+}
+
+.written-comment-name {
+    cursor: pointer;
+    font-size: 0.8em;
+    font-weight: 600;
+}
+
+.written-comment-name:hover {
+    text-decoration: underline;
+}
 
 
 
