--- a/style.css
+++ b/style.css
@@ -1817,6 +1817,30 @@ a {
     .main-wrapper-right {
         padding-right: 0;
     }
+
+    .navbar-icon.mobile-menu {
+        display: block!important;
+    }
+
+    .navbar-icon.mobile-menu.current img{
+        filter: brightness(0) saturate(100%) invert(40%) sepia(78%) saturate(3687%) hue-rotate(201deg) brightness(95%) contrast(99%);;
+    }
+
+    .main-wrapper-left {
+        position: absolute;
+        top: 0;
+        left: 0;
+        min-width: 100vw;
+        height: calc(100vh - 80px);
+        z-index: 1000;
+        background-color: #F0F2F5;
+        margin-top: 70px;
+        padding: 16px;
+    }
+
+    .main-wrapper-left.active {
+        display: block;
+    }
 }
 
 @media screen and (max-width: 1075px) {
@@ -1831,7 +1855,7 @@ a {
     }
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 960px) {
     .navbar-icon {
         padding: 4px 8px;
     }
@@ -1858,8 +1882,8 @@ a {
     }
 }
 
-@media screen and (max-width: 775px) {
-    .navbar-middle {
+@media screen and (max-width: 817px) {
+    .navbar-icon {
         display: none;
     }
 }
@@ -1877,7 +1901,7 @@ a {
 
 }
 
-@media screen and (max-width: 590px) {
+@media screen and (max-width: 597px) {
     .menu-modal {
         padding: 0;
     }
@@ -1912,7 +1936,7 @@ a {
     }
 }
 
-@media screen and (max-width: 535px) {
+@media screen and (max-width: 574px) {
     .navbar-wrapper input:first-of-type {
         min-width: 0;
         width: 130px;
@@ -1965,14 +1989,26 @@ a {
     .main-wrapper-middle-publication-modal-input-more-options p {
         font-size: 0.7em;
     }
+
+    .profile-icon {
+        margin: 0;
+    }
 }
 
 @media screen and (max-width: 425px) {   
     .messenger-modal-item-wrapper {
         max-height: 60vh;
     }
-    
+
     .notification-modal {
         max-height: 70vh;
     }
+}
+
+@media screen and (max-width: 400px) {
+    .messenger-modal, .notification-modal, .more-modal {
+        right: 4px;
+        width: 340px;
+    }
+    
 }
